<package>
    <name>opencvblobs_catkin</name>
    <version>0.0.1</version>
    <description>opencvblobs_catkin</description>
    <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>
    <maintainer email="deldonc@student.ethz.ch">Carlo Del Don</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <buildtool_depend>opencv_catkin</buildtool_depend>

</package>
